Full
  cast to Object for a varargs call
  cast to Object[] for a non-varargs call and to suppress this warning
/ado-agent-workdir/1/s/***-rcb-atlas-interface-services/src/main/java/scb/process/FileTransferObjectIMFT_Solace.java:883: error: cannot find symbol
					logwriter.println("Before Calling isMointorLoggingEnabled>>>> ");
					^
  symbol:   variable logwriter
  location: class FileTransferObjectIMFT_Solace
/ado-agent-workdir/1/s/***-rcb-atlas-interface-services/src/main/java/scb/process/FileTransferObjectIMFT_Solace.java:897: error: cannot find symbol
				logwriter.println("isMointorLoggingEnabled >>>>"+e);
				^
  symbol:   variable logwriter

String logDetails = eodDate + "#" + currTime + "#" + finalStatusFlag + "#" + finalStatusDesc + "#" + wrapper.fileTransferId+"#"+idNumber;
			try{
				if ((SCBPARAMCache.getInstance().getCache("ENABLE_MOINTOR_LOGGING") != null)&& (SCBPARAMCache.getInstance().getCache("ENABLE_MOINTOR_LOGGING").trim().equals("Y"))){
			        Map<String, String> map = new HashMap<>();
			        map.put("GrafanaFTData: eodDate", eodDate);
			        map.put("currTime", currTime);
			        map.put("finalStatusFlag", finalStatusFlag);
			        map.put("finalStatusDesc", finalStatusDesc);
			        map.put("finalFTFID", wrapper.fileTransferId);
			        map.put("idNumber", idNumber);
			        String json = jsonLogWriter.mapToJson(map);
			        jsonLog.printGrafanaLog(json);
				}}catch(Exception e){
				logWriter.println("isMointorLoggingEnabled >>>>"+e);}
